--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -2,4 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-
+body {
+    background-image: url(../assets/noise.png);
+    background-size: 200px 200px;
+    background-position: 0 0;
+}
