--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    background-image: url(../assets/noise.png);
+    background-image: url(../assets/images/noise.png);
     background-size: 200px 200px;
     background-position: 0 0;
 }
