--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -12,6 +12,10 @@ html {
     --line-color: #e4e4e7;
 }
 
+html.dark {
+    --line-color: rgba(255, 255, 255, 0.2);
+}
+
 .borderBlack {
     @apply border border-black/10;
 }
