--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -9,11 +9,11 @@ body {
 }
 
 html {
-    --line-color: #e4e4e7;
+    --line-color: #00000012;
 }
 
 html.dark {
-    --line-color: rgba(255, 255, 255, 0.2);
+    --line-color: #ffffff20;
 }
 
 .borderBlack {
