--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -19,3 +19,17 @@ html.dark {
 .borderBlack {
     @apply border border-black/10;
 }
+
+:root {
+    --header-height: 105px;
+}
+
+.intro {
+    min-height: calc(100vh - var(--header-height));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: var(--header-height);
+    box-sizing: border-box;
+}
