forty second commit

--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -33,3 +33,18 @@ html.dark {
     padding-top: var(--header-height);
     box-sizing: border-box;
 }
+
+.path {
+    stroke-dasharray: 500px 100px;
+    animation: animate 100s linear infinite alternate-reverse;
+}
+
+@keyframes animate {
+    from {
+        stroke-dashoffset: 0;
+    }
+
+    to {
+        stroke-dashoffset: 12433.8193359375;
+    }
+}
