--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -25,7 +25,7 @@ html.dark {
 }
 
 .intro {
-    min-height: calc(100vh - var(--header-height));
+    min-height: calc(100svh - var(--header-height));
     display: flex;
     align-items: center;
     justify-content: center;
