forty eighth commit

--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -34,7 +34,7 @@ html.dark {
     box-sizing: border-box;
 }
 
-.path {
+/* .path {
     stroke-dasharray: 500px 100px;
     animation: animate 100s linear infinite alternate-reverse;
 }
@@ -47,4 +47,4 @@ html.dark {
     to {
         stroke-dashoffset: 12433.8193359375;
     }
-}
+} */
