--- a/portfolio/src/preloader/style.module.css
+++ b/portfolio/src/preloader/style.module.css
@@ -1,4 +1,4 @@
-.preloader {
+/* .preloader {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -27,4 +27,4 @@
     align-items: center;
     position: absolute;
     z-index: 9;
-}
+} */
